<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".InvoiceProductsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/back"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/buttonshape"
            android:onClick="onBackClick"
            android:shadowColor="#FAAAED"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/nazad"
            android:textColor="#0F2938"
            android:textSize="20dp" />

        <Button
            android:id="@+id/next"
            android:onClick="onNextClick"
            android:text="@string/ponatamu"
            android:textColor="#0F2938"
            android:textSize="20dp"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#FAAAED"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/proizvodi"
        android:textColor="@color/accent"
        android:textSize="24sp" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1">
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/maintable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">



        </TableLayout>

    </ScrollView>
</LinearLayout>