<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/blue_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Switch
            android:id="@+id/switch2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="15dp"
            android:button="@color/accent"
            android:onClick="updateRemoteControl"
            android:text="@string/kamera"
            android:textColor="@color/accent"
            android:textColorLink="@color/accent"
            android:textOff="@string/iskluceno"
            android:textOn="@string/vkluceno"
            android:textSize="20dp" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="15dp"
            android:button="@color/accent"
            android:onClick="updateRemoteControl"
            android:text="@string/muzika"
            android:textColor="@color/accent"
            android:textColorLink="@color/accent"
            android:textOff="@string/iskluceno"
            android:textOn="@string/vkluceno"
            android:textSize="20dp" />

        <Switch
            android:id="@+id/switch4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:button="@color/accent"
            android:onClick="updateRemoteControl"
            android:text="@string/svetlo"
            android:textColor="@color/accent"
            android:textColorLink="@color/accent"
            android:textOff="@string/iskluceno"
            android:textOn="@string/vkluceno"
            android:textSize="20dp" />

    </LinearLayout>

</RelativeLayout>
-->

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" >

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="200px">

            <Switch
                android:id="@+id/switch2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="15dp"
                android:button="@color/accent"
                android:onClick="updateRemoteControl"
                android:text="@string/kamera"
                android:textColor="@color/accent"
                android:textColorLink="@color/accent"
                android:textOff="@string/iskluceno"
                android:textOn="@string/vkluceno"
                android:textSize="20dp" />

            <Switch
                android:id="@+id/switch3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="15dp"
                android:button="@color/accent"
                android:onClick="updateRemoteControl"
                android:text="@string/muzika"
                android:textColor="@color/accent"
                android:textColorLink="@color/accent"
                android:textOff="@string/iskluceno"
                android:textOn="@string/vkluceno"
                android:textSize="20dp" />

            <Switch
                android:id="@+id/switch4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:button="@color/accent"
                android:onClick="updateRemoteControl"
                android:text="@string/svetlo"
                android:textColor="@color/accent"
                android:textColorLink="@color/accent"
                android:textOff="@string/iskluceno"
                android:textOn="@string/vkluceno"
                android:textSize="20dp" />

        </LinearLayout>
    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_main"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>