<!--
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".InvoiceActivity"
    android:background="@drawable/blue_background"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:onClick="onBackClick"
            android:text="@string/nazad"
            android:textColor="#0F2938"
            android:textSize="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#FAAAED"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />

        <Button
            android:id="@+id/next"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:background="@drawable/buttonshape"
            android:onClick="onnextClick"
            android:shadowColor="#FAAAED"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/ponatamu"
            android:textColor="#0F2938"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/imeNaFirma"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorLink="@color/accent" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dopolnitelniPodatoci"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorLink="@color/accent" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/productnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/brNaProizvodi"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorLink="@color/accent" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</LinearLayout>-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" >

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="120px">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back"
                    android:onClick="onBackClick"
                    android:text="@string/nazad"
                    android:textColor="#0F2938"
                    android:textSize="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="#FAAAED"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    />

                <Button
                    android:id="@+id/next"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:background="@drawable/buttonshape"
                    android:onClick="onnextClick"
                    android:shadowColor="#FAAAED"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/ponatamu"
                    android:textColor="#0F2938"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/company_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/imeNaFirma"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorLink="@color/accent" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dopolnitelniPodatoci"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorLink="@color/accent" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/productnum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/brNaProizvodi"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textColorLink="@color/accent" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_main"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>